<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_explore"
            android:title="@string/menu_explore" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorites"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/ic_upload"
            android:title="@string/menu_upload" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>

    <group android:id="@+id/group_divider">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>