<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_explore">

    <fragment
        android:id="@+id/nav_explore"
        android:name="com.example.efoodie.ui.explore.ExploreFragment"
        android:label="@string/menu_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.efoodie.ui.favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />


    <activity
        android:id="@+id/nav_upload"
        android:name="com.example.efoodie.ui.upload.UploadActivity"
        android:label="@string/menu_upload"
        tools:layout="@layout/activity_upload" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.efoodie.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />


</navigation>